--- a/index.html
+++ b/index.html
@@ -11,5 +11,16 @@
         <h1 class="wrap__title">
           Что скрывает кожа?
         </h1>
+      </div>
+      <div class="hamburger-menu">
+        <input id="menu__toggle" type="checkbox"/>
+        <label class="menu__btn" for="menu__toggle">
+          <span></span>
+        </label>
+        <ul class="menu__box">
+          <li><a class="menu__item" href="#">Главная</a></li>
+          <li><a class="menu__item" href="#">О книге</a></li>
+          <li><a class="menu__item" href="#">Контакты</a></li>
+        </ul>
     </body>
   </html>
