--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           Что скрывает кожа?
         </h1>
         <p>
-          2 квадратных метра, которые диктуют, как нам жить
+          2 квадратных метра, которые диктуют, как нам жить.
         </p>
       </div>
       <div class="hamburger-menu">
